Some more CSS fuckery.

--- a/forthefuture/main.css
+++ b/forthefuture/main.css
@@ -3,25 +3,25 @@ body {
   background-color: #000000 !important;
 }
 h1 {
-  color: white;
+  color: #ffffff;
 }
 h2 {
-  color: white;
+  color: #ffffff;
 }
 h3 {
-  color: white;
+  color: #ffffff;
 }
 h4 {
-  color: white;
+  color: #ffffff;
 }
 h5 {
-  color: white;
+  color: #ffffff;
 }
 h6 {
-  color: white;
+  color: #ffffff;
 }
 p {
-  color: white;
+  color: #ffffff;
 }
 a:link {
 	color: #3333FF;
