Let's finally fix this bitch!
Credits to DEJVOSS for telling me to just remove the tags lmao

--- a/forthefuture/main.css
+++ b/forthefuture/main.css
@@ -1,6 +1,5 @@
-<style type="text/css">
 body {
-  background-color: #000000 !important;
+  background-color: #000000;
 }
 h1 {
   color: #ffffff;
@@ -35,4 +34,3 @@ a:hover {
 a:active {
 	color: #FF3333;
 }
-</style>
